[package]
name = "rv2b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.51", features = ["cargo"] }
rand = "0.8.4"
rand_distr = "0.4.3"
ndarray = "0.16.1"
ndarray-stats = "0.5.1"
csv = "1.3.1"
nalgebra = "0.33.0"
rayon = "1.10.0"
indexmap = "2.12.1"
normality = "3.0.0"
plotters = { version = "0.3.7", features = ["ab_glyph", "fontconfig-dlopen"] }
chrono = "0.4.44"
mimalloc = { version = "0.1.48", features = ["v3", "static"] }

[profile.release]
codegen-units = 1
lto = "fat"
debug = true
strip = "debuginfo"
